[gd_scene load_steps=4 format=3 uid="uid://buxr1rvcq82df"]

[ext_resource type="Script" uid="uid://78ol48ucidse" path="res://src/unit/character/enemy/rigid_bullet.gd" id="1_bu0og"]
[ext_resource type="PackedScene" uid="uid://ctjmfotnke34v" path="res://src/unit/common/hitbox/hitbox.tscn" id="2_hn1sa"]
[ext_resource type="Script" uid="uid://cp8adijnorm6o" path="res://src/unit/common/particle/particle_queue.gd" id="3_iw1uj"]

[node name="RigidBullet" type="RigidBody2D" groups=["bullet"]]
collision_layer = 0
collision_mask = 257
script = ExtResource("1_bu0og")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="Hitbox" parent="." instance=ExtResource("2_hn1sa")]
collision_layer = 16
collision_mask = 2048
disabled = true
damage = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]

[node name="ParticlePoint" type="Marker2D" parent="."]

[node name="ParticleQueue" type="Node" parent="."]
script = ExtResource("3_iw1uj")
metadata/_custom_type_script = "uid://cp8adijnorm6o"

[node name="LifeTimer" type="Timer" parent="."]
one_shot = true

[node name="FrictionTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
z_index = -1
position = Vector2(1.52588e-05, 2.28882e-05)
scale = Vector2(19.2, 10.8)
metadata/_edit_lock_ = true

[connection signal="collided" from="Hitbox" to="." method="_on_hitbox_collided"]
[connection signal="timeout" from="LifeTimer" to="." method="_on_life_timer_timeout"]
[connection signal="timeout" from="FrictionTimer" to="." method="_on_friction_timer_timeout"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
